setting up the bike stations df to populate with foursquare POI data

--- a/notebooks/joining_data.ipynb
+++ b/notebooks/joining_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,17 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os # use this to access your environment variables\n",
-    "import requests # this will be used to call the APIs"
+    "import requests # this will be used to call the APIs\n",
+    "\n",
+    "FOURSQUARE_KEY = os.getenv('FOURSQUARE_API_KEY')\n",
+    "YELP_KEY = os.getenv('YELP_API_KEY')\n",
+    "\n",
+    "# you can print to confirm both API keys have been imported successfully from Terminal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +35,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**This bike_stations data is based on the Saturday, 3pm citybikes API call**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +247,7 @@
        "[826 rows x 8 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,12 +258,453 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test"
+    "# testing the ability to parse for POI category, number of POIs for a sample API response, need the non-cleaned version\n",
+    "venue_df = pd.read_csv(\"../data/test_venue_df.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_bike_df = bike_stations.sample(n=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>free_bikes</th>\n",
+       "      <th>empty_slots</th>\n",
+       "      <th>bike_availability</th>\n",
+       "      <th>ll</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>599</th>\n",
+       "      <td>3a73375ca8c3f3fc85b7b32ec080be5e</td>\n",
+       "      <td>Greenwood Ave / Sammon Ave</td>\n",
+       "      <td>43.686987</td>\n",
+       "      <td>-79.334782</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9.09</td>\n",
+       "      <td>43.686987,-79.334782</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>d06ed2c21f6ff4e4cbc77b64e65bd801</td>\n",
+       "      <td>Crawford St / Queen St W</td>\n",
+       "      <td>43.645665</td>\n",
+       "      <td>-79.415345</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>83.33</td>\n",
+       "      <td>43.645665,-79.415345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>389</th>\n",
+       "      <td>fb2618cee3456166ccc52c3ceeae13c6</td>\n",
+       "      <td>Moore Park</td>\n",
+       "      <td>43.693256</td>\n",
+       "      <td>-79.383238</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>43.693256,-79.383238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>296</th>\n",
+       "      <td>b7461d8effda846e2f78dfbee059c433</td>\n",
+       "      <td>Lake Shore Blvd W / Thirty Ninth Street</td>\n",
+       "      <td>43.592742</td>\n",
+       "      <td>-79.540330</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>43.592742,-79.54033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>584</th>\n",
+       "      <td>84e8e3827807916c9c3ac9b60404346d</td>\n",
+       "      <td>Firvalley Ct / Warden Ave</td>\n",
+       "      <td>43.703211</td>\n",
+       "      <td>-79.278715</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>11.11</td>\n",
+       "      <td>43.703211,-79.278715</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   id  \\\n",
+       "599  3a73375ca8c3f3fc85b7b32ec080be5e   \n",
+       "91   d06ed2c21f6ff4e4cbc77b64e65bd801   \n",
+       "389  fb2618cee3456166ccc52c3ceeae13c6   \n",
+       "296  b7461d8effda846e2f78dfbee059c433   \n",
+       "584  84e8e3827807916c9c3ac9b60404346d   \n",
+       "\n",
+       "                                        name   latitude  longitude  \\\n",
+       "599               Greenwood Ave / Sammon Ave  43.686987 -79.334782   \n",
+       "91                  Crawford St / Queen St W  43.645665 -79.415345   \n",
+       "389                               Moore Park  43.693256 -79.383238   \n",
+       "296  Lake Shore Blvd W / Thirty Ninth Street  43.592742 -79.540330   \n",
+       "584                Firvalley Ct / Warden Ave  43.703211 -79.278715   \n",
+       "\n",
+       "     free_bikes  empty_slots  bike_availability                    ll  \n",
+       "599           1           10               9.09  43.686987,-79.334782  \n",
+       "91           15            3              83.33  43.645665,-79.415345  \n",
+       "389           0           14               0.00  43.693256,-79.383238  \n",
+       "296          19            0             100.00   43.592742,-79.54033  \n",
+       "584           2           16              11.11  43.703211,-79.278715  "
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_bike_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Strategy is as follows:\n",
+    "Steps for the 10 stations in sample_bike_df, ensure it works for the 820 rows in the whole city bike dataset**:\n",
+    "\n",
+    "1. Define my get_venues_fs function to call the Foursquare API. Set it up so that it can take a concatenated ll string, like the ll column of bike_stations and sample_bike_df.\n",
+    "2. Initialize a new bike_stations df with the columns to fill in for # of POIs, and # of POIs in certain categories.\n",
+    "3. Loop through each bike station, make the get_venues_fs call with its ll column to find venue results with the data in step 2. \n",
+    "4. With the returned results, we'll parse for the number of POI categories, and the number of POIs generally (know that the upper limit of returns is 50, radius of the call is 800m to make <=50 results meaningful)\n",
+    "5. We should have a dataframe returned containing 1) the original ll call which we can use to join the bike_stations table later if we wish, 2) the number of POIs and number of establishments within POI categories, to train the model\n",
+    "\n",
+    "Notes:\n",
+    "\n",
+    "**I am doing step 2 here and not in yelp_foursquare_EDA to avoid bringing city_bikes data into the yelp_foursquare notebook, so any cross-referencing of city bikes with venue data will happen here**.\n",
+    "\n",
+    "**In the likely event that some bike station ll's will retrieve establishments that were retrieved by another bike station (e.g. in Downtown Toronto where several stations will be within 800m of each other), I am retrieving the fsq_id for the establishments which will be checked for dupes, with dupes removed, before removing the column in cleaning to join it with a cleaned bike_stations df**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1 from Strategy: Defining the foursquare API Call here\n",
+    "\n",
+    "def get_venues_fs(ll, radius, api_key, categories, limit):\n",
+    "    \"\"\"\n",
+    "    Get amenities and POIs from Foursquare API call\n",
+    "    Args:\n",
+    "        latitude (float): latitude for query (must be combined with longitude)\n",
+    "        longitude (float): longitude for query (must be combined with latitude)\n",
+    "        api_key (str): foursquare API to use for query (imported in line above)\n",
+    "        categories (str) : Foursquare-recognized place type. If not passed no place_type will be specified. Separate ids with commas\n",
+    "    \n",
+    "    Returns:\n",
+    "        response: response object from the requests library.\n",
+    "    \"\"\"\n",
+    "    url = \"https://api.foursquare.com/v3/places/search\"\n",
+    "    \n",
+    "    headers = {\n",
+    "        \"Accept\": \"application/json\",\n",
+    "        \"Authorization\": api_key\n",
+    "    }\n",
+    "    \n",
+    "    params = {\n",
+    "        \"ll\": ll,\n",
+    "        \"radius\": radius,\n",
+    "        \"categories\": categories,\n",
+    "        \"limit\": limit\n",
+    "    }\n",
+    "    \n",
+    "    response = requests.get(url, headers=headers, params=params)\n",
+    "    \n",
+    "    if response.status_code == 200: # 200 is success\n",
+    "        return response.json()\n",
+    "    else:\n",
+    "        response.raise_for_status()\n",
+    "\n",
+    "categories = '10035,13003,13065,16000' # Category codes - bars, restaurants, live shows, outdoors\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>free_bikes</th>\n",
+       "      <th>empty_slots</th>\n",
+       "      <th>bike_availability</th>\n",
+       "      <th>ll</th>\n",
+       "      <th>n_pois</th>\n",
+       "      <th>n_bar_restaurant</th>\n",
+       "      <th>n_live</th>\n",
+       "      <th>n_park</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>599</th>\n",
+       "      <td>3a73375ca8c3f3fc85b7b32ec080be5e</td>\n",
+       "      <td>Greenwood Ave / Sammon Ave</td>\n",
+       "      <td>43.686987</td>\n",
+       "      <td>-79.334782</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9.09</td>\n",
+       "      <td>43.686987,-79.334782</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>d06ed2c21f6ff4e4cbc77b64e65bd801</td>\n",
+       "      <td>Crawford St / Queen St W</td>\n",
+       "      <td>43.645665</td>\n",
+       "      <td>-79.415345</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>83.33</td>\n",
+       "      <td>43.645665,-79.415345</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>389</th>\n",
+       "      <td>fb2618cee3456166ccc52c3ceeae13c6</td>\n",
+       "      <td>Moore Park</td>\n",
+       "      <td>43.693256</td>\n",
+       "      <td>-79.383238</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>43.693256,-79.383238</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>296</th>\n",
+       "      <td>b7461d8effda846e2f78dfbee059c433</td>\n",
+       "      <td>Lake Shore Blvd W / Thirty Ninth Street</td>\n",
+       "      <td>43.592742</td>\n",
+       "      <td>-79.540330</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>43.592742,-79.54033</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>584</th>\n",
+       "      <td>84e8e3827807916c9c3ac9b60404346d</td>\n",
+       "      <td>Firvalley Ct / Warden Ave</td>\n",
+       "      <td>43.703211</td>\n",
+       "      <td>-79.278715</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>11.11</td>\n",
+       "      <td>43.703211,-79.278715</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   id  \\\n",
+       "599  3a73375ca8c3f3fc85b7b32ec080be5e   \n",
+       "91   d06ed2c21f6ff4e4cbc77b64e65bd801   \n",
+       "389  fb2618cee3456166ccc52c3ceeae13c6   \n",
+       "296  b7461d8effda846e2f78dfbee059c433   \n",
+       "584  84e8e3827807916c9c3ac9b60404346d   \n",
+       "\n",
+       "                                        name   latitude  longitude  \\\n",
+       "599               Greenwood Ave / Sammon Ave  43.686987 -79.334782   \n",
+       "91                  Crawford St / Queen St W  43.645665 -79.415345   \n",
+       "389                               Moore Park  43.693256 -79.383238   \n",
+       "296  Lake Shore Blvd W / Thirty Ninth Street  43.592742 -79.540330   \n",
+       "584                Firvalley Ct / Warden Ave  43.703211 -79.278715   \n",
+       "\n",
+       "     free_bikes  empty_slots  bike_availability                    ll  n_pois  \\\n",
+       "599           1           10               9.09  43.686987,-79.334782       0   \n",
+       "91           15            3              83.33  43.645665,-79.415345       0   \n",
+       "389           0           14               0.00  43.693256,-79.383238       0   \n",
+       "296          19            0             100.00   43.592742,-79.54033       0   \n",
+       "584           2           16              11.11  43.703211,-79.278715       0   \n",
+       "\n",
+       "     n_bar_restaurant  n_live  n_park  \n",
+       "599                 0       0       0  \n",
+       "91                  0       0       0  \n",
+       "389                 0       0       0  \n",
+       "296                 0       0       0  \n",
+       "584                 0       0       0  "
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Step 2: get the bike station dataframe ready for the Foursquare API data to fill in in step 3\n",
+    "\n",
+    "sample_bike_df['n_pois'] = 0\n",
+    "sample_bike_df['n_bar_restaurant'] = 0\n",
+    "sample_bike_df['n_live'] = 0\n",
+    "sample_bike_df['n_park'] = 0\n",
+    "sample_bike_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bay St / Albert St, 43.653264,-79.382458\n",
+      "Lynn Williams St / Pirandello St , 43.639125,-79.414232\n",
+      "Humber River Hospital , 43.725379,-79.487197\n",
+      "Scott St / The Esplanade, 43.646597,-79.375309\n",
+      "Howard St / Sherbourne St, 43.671258,-79.376367\n",
+      "Joe Shuster Way / King St W , 43.640397,-79.423742\n",
+      "Ellesmere Rd / Markham Rd, 43.776829,-79.2305\n",
+      "Yonge St / St Clair Ave, 43.688505,-79.394005\n",
+      "Granby St / Church St - SMART, 43.66146,-79.378946\n",
+      "Howard Park Ave / Dundas St W - SMART, 43.6521,-79.4486\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 3:\n",
+    "\n",
+    "# lists for the augmented bike_stations for the model - number of POIs, bars/restaurants/live venues, parks to populate columns for the model training\n",
+    "n_poi_list = []\n",
+    "n_barresto_list = []\n",
+    "n_live_list = []\n",
+    "n_park_list = []\n",
+    "\n",
+    "# lists for the venues returned via the API call\n",
+    "\n",
+    "fsq_id_list = []\n",
+    "ll_list = []\n",
+    "name_list = []\n",
+    "address_list = []\n",
+    "category_list = []\n",
+    "\n",
+    "#make sure we can correctly access ll in bike_stations - all good\n",
+    "for index, row in sample_bike_df.iterrows():\n",
+    "    print(f\"{row['name']}, {row['ll']}\")\n",
+    "\n",
+    "    # res = get_venues_fs(ll=0,0, radius=800, api_key=FOURSQUARE_KEY, categories=categories, limit=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -268,13 +721,6 @@
    "source": [
     "# Json normalize!!!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
