played with SQL database and joined some tables

--- a/notebooks/joining_data.ipynb
+++ b/notebooks/joining_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 562,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import os # access the environment variables\n",
+    "import os # access the environment variables and directory\n",
     "import requests # this will be used to call the APIs\n",
     "from unidecode import unidecode # remove accents from venues e.g. café --> cafe\n",
     "import re # regex search for strings\n",
@@ -2086,6 +2086,290 @@
    "metadata": {},
    "source": [
     "Look at the data before and after the join to validate your data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Queen St E / Woodward Ave', '43.665269,-79.319796')\n",
+      "('Primrose Ave / Davenport Rd', '43.67142,-79.445947')\n",
+      "('Queen St E / Rhodes Ave', '43.666224,-79.317693')\n",
+      "('Bond St / Queen St E', '43.653236,-79.376716')\n",
+      "('Church St / Alexander St', '43.663722,-79.380288')\n",
+      "('University Ave / Gerrard St W (East Side)', '43.657763,-79.389165')\n",
+      "('Edward St / Yonge St', '43.656729,-79.382736')\n",
+      "('Euclid Ave / Bloor St W', '43.664467,-79.414783')\n",
+      "('Yonge St / Aylmer Ave', '43.675492,-79.388858')\n",
+      "('Davenport Rd / Avenue Rd', '43.674991,-79.396273')\n"
+     ]
+    }
+   ],
+   "source": [
+    "directory = '../data/sql'\n",
+    "db_path = os.path.join(directory, 'locations.db')\n",
+    "\n",
+    "#connect to SQlite database\n",
+    "conn = sqlite3.connect(db_path)\n",
+    "\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# SQL statement just select some bike stations to test\n",
+    "SQL = \"SELECT name, ll FROM bikestations LIMIT 10\"\n",
+    "\n",
+    "# execute the query\n",
+    "cursor.execute(SQL)\n",
+    "\n",
+    "results = cursor.fetchall()\n",
+    "\n",
+    "for row in results:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Above: We have access to the bikestations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Rorschach Brewing', '43.665269,-79.319796')\n",
+      "('The Sidekick', '43.665269,-79.319796')\n",
+      "('Woodbine Park', '43.665269,-79.319796')\n",
+      "('Lake Inez', '43.665269,-79.319796')\n",
+      "('History', '43.665269,-79.319796')\n",
+      "('Udupi Palace', '43.665269,-79.319796')\n",
+      "('British Style Fish & Chips', '43.665269,-79.319796')\n",
+      "('Chick-N-Joy', '43.665269,-79.319796')\n",
+      "(\"The Burger's Priest\", '43.665269,-79.319796')\n",
+      "(\"Brett's Ice Cream\", '43.665269,-79.319796')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SQL statement just select some bike stations to test\n",
+    "SQL = \"SELECT name, ll FROM venues LIMIT 10\"\n",
+    "\n",
+    "# execute the query\n",
+    "cursor.execute(SQL)\n",
+    "\n",
+    "results = cursor.fetchall()\n",
+    "\n",
+    "for row in results:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Above: We have access to venues, we should clean these for avoiding duplicates. The id column would be useful for this and once dupes are removed, it can be used as a primary key in the database."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Joining the two together:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station_ll</th>\n",
+       "      <th>station_location</th>\n",
+       "      <th>venue_name</th>\n",
+       "      <th>venue_category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>43.665269,-79.319796</td>\n",
+       "      <td>Queen St E / Woodward Ave</td>\n",
+       "      <td>Rorschach Brewing</td>\n",
+       "      <td>Brewery</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>43.665269,-79.319796</td>\n",
+       "      <td>Queen St E / Woodward Ave</td>\n",
+       "      <td>The Sidekick</td>\n",
+       "      <td>Coffee Shop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>43.665269,-79.319796</td>\n",
+       "      <td>Queen St E / Woodward Ave</td>\n",
+       "      <td>Woodbine Park</td>\n",
+       "      <td>Park</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>43.665269,-79.319796</td>\n",
+       "      <td>Queen St E / Woodward Ave</td>\n",
+       "      <td>Lake Inez</td>\n",
+       "      <td>Bar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>43.665269,-79.319796</td>\n",
+       "      <td>Queen St E / Woodward Ave</td>\n",
+       "      <td>History</td>\n",
+       "      <td>Concert Hall</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>295</th>\n",
+       "      <td>43.656729,-79.382736</td>\n",
+       "      <td>Edward St / Yonge St</td>\n",
+       "      <td>Jimmy's Coffee</td>\n",
+       "      <td>Café</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>296</th>\n",
+       "      <td>43.656729,-79.382736</td>\n",
+       "      <td>Edward St / Yonge St</td>\n",
+       "      <td>Yonge-Dundas Square</td>\n",
+       "      <td>Plaza</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>43.656729,-79.382736</td>\n",
+       "      <td>Edward St / Yonge St</td>\n",
+       "      <td>Five Guys Burgers &amp; Fries</td>\n",
+       "      <td>Burger Joint</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298</th>\n",
+       "      <td>43.656729,-79.382736</td>\n",
+       "      <td>Edward St / Yonge St</td>\n",
+       "      <td>Tim Hortons</td>\n",
+       "      <td>Cafe, Coffee, and Tea House</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>43.656729,-79.382736</td>\n",
+       "      <td>Edward St / Yonge St</td>\n",
+       "      <td>Royal Alexandra Theatre</td>\n",
+       "      <td>Theater</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               station_ll           station_location  \\\n",
+       "0    43.665269,-79.319796  Queen St E / Woodward Ave   \n",
+       "1    43.665269,-79.319796  Queen St E / Woodward Ave   \n",
+       "2    43.665269,-79.319796  Queen St E / Woodward Ave   \n",
+       "3    43.665269,-79.319796  Queen St E / Woodward Ave   \n",
+       "4    43.665269,-79.319796  Queen St E / Woodward Ave   \n",
+       "..                    ...                        ...   \n",
+       "295  43.656729,-79.382736       Edward St / Yonge St   \n",
+       "296  43.656729,-79.382736       Edward St / Yonge St   \n",
+       "297  43.656729,-79.382736       Edward St / Yonge St   \n",
+       "298  43.656729,-79.382736       Edward St / Yonge St   \n",
+       "299  43.656729,-79.382736       Edward St / Yonge St   \n",
+       "\n",
+       "                    venue_name               venue_category  \n",
+       "0            Rorschach Brewing                      Brewery  \n",
+       "1                 The Sidekick                  Coffee Shop  \n",
+       "2                Woodbine Park                         Park  \n",
+       "3                    Lake Inez                          Bar  \n",
+       "4                      History                 Concert Hall  \n",
+       "..                         ...                          ...  \n",
+       "295             Jimmy's Coffee                         Café  \n",
+       "296        Yonge-Dundas Square                        Plaza  \n",
+       "297  Five Guys Burgers & Fries                 Burger Joint  \n",
+       "298                Tim Hortons  Cafe, Coffee, and Tea House  \n",
+       "299    Royal Alexandra Theatre                      Theater  \n",
+       "\n",
+       "[300 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# SQL statement just select some bike stations to test\n",
+    "SQL = \"\"\"\n",
+    "SELECT bs.ll AS station_location, bs.name AS station_name, v.name AS venue_name, v.category as venue_category\n",
+    "FROM venues v \n",
+    "JOIN bikestations bs ON bs.ll = v.ll\n",
+    "LIMIT 300\n",
+    "\"\"\"\n",
+    "\n",
+    "# execute the query\n",
+    "cursor.execute(SQL)\n",
+    "\n",
+    "results = cursor.fetchall()\n",
+    "\n",
+    "df = pd.DataFrame(results, columns=['station_ll', 'station_location', 'venue_name', 'venue_category'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Above:\n",
+    "We joined the venues and bike stations on the bike station latlong (column name is ll in the database, renamed it to station_ll)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()"
    ]
   },
   {
