minor change to joining_data

--- a/notebooks/joining_data.ipynb
+++ b/notebooks/joining_data.ipynb
@@ -2360,7 +2360,8 @@
    "metadata": {},
    "source": [
     "Above:\n",
-    "We joined the venues and bike stations on the bike station latlong (column name is ll in the database, renamed it to station_ll)"
+    "We joined the venues and bike stations on the bike station latlong (column name is ll in the database, renamed it to station_ll).\n",
+    "With this we could save this dataframe and use it to search specific station locations and see which venues come up in that area."
    ]
   },
   {
