minor updates to comments clean up

--- a/notebooks/yelp_foursquare_EDA.ipynb
+++ b/notebooks/yelp_foursquare_EDA.ipynb
@@ -252,7 +252,7 @@
     "I have saved a sample request in csv format for easy access without having to make another API call.\n",
     "How I want to manipulate the data:\n",
     "- This table represents the results of one such bike station so we will have 820 of these calls.\n",
-    "- For each one i'd like to record the number of cafes, number of bar/restaurants/pub, number of park/playground and number of live venues\n",
+    "- For each one I'd like to record the number of cafes, number of bar/restaurants/pub, number of park/playground and number of live venues\n",
     "- This is ultimately one data point for each search category for each of these returned dataframes e.g. this one above\n",
     "- For this I'm going to need to catch some general terms e.g. Pub/bar/restaurant (whether Irish pub, greek restaurant, BBQ Joint) via Regex"
    ]
