--- a/notebooks/model_building.ipynb
+++ b/notebooks/model_building.ipynb
@@ -326,7 +326,7 @@
     "print(data['bike_availability'].isna().sum())\n",
     "\n",
     "# Check for infinite values in the bike_availability column - this will disrupt our p-value calculations later\n",
-    "print(np.isinf(data['bike_availability']).sum())\n"
+    "print(np.isinf(data['bike_availability']).sum())"
    ]
   },
   {
